// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edge passes show arrowhead 1`] = `
<g
  className="dm-edge"
  data-event-target={true}
  data-id="myEdge"
  data-type="DiagramMaker.Edge"
>
  <EdgeCurve
    className="dm-path-inner"
    dest={
      Object {
        "x": 100,
        "y": 0,
      }
    }
    edgeStyle={0}
    showArrowhead={true}
    src={
      Object {
        "x": 0,
        "y": 100,
      }
    }
  />
  <EdgeCurve
    className="dm-path-outer"
    dest={
      Object {
        "x": 100,
        "y": 0,
      }
    }
    edgeStyle={0}
    showArrowhead={true}
    src={
      Object {
        "x": 0,
        "y": 100,
      }
    }
  />
</g>
`;

exports[`Edge renders selected class 1`] = `
<g
  className="dm-edge dm-selected"
  data-event-target={true}
  data-id="myEdge"
  data-type="DiagramMaker.Edge"
>
  <EdgeCurve
    className="dm-path-inner"
    dest={
      Object {
        "x": 100,
        "y": 0,
      }
    }
    edgeStyle={0}
    src={
      Object {
        "x": 0,
        "y": 100,
      }
    }
  />
  <EdgeCurve
    className="dm-path-outer"
    dest={
      Object {
        "x": 100,
        "y": 0,
      }
    }
    edgeStyle={0}
    src={
      Object {
        "x": 0,
        "y": 100,
      }
    }
  />
</g>
`;

exports[`Edge renders source & dest types 1`] = `
<g
  className="dm-edge"
  data-edge-dest-type="destinationType"
  data-edge-source-type="sourceType"
  data-event-target={true}
  data-id="myEdge"
  data-type="DiagramMaker.Edge"
>
  <EdgeCurve
    className="dm-path-inner"
    dest={
      Object {
        "x": 100,
        "y": 0,
      }
    }
    edgeStyle={0}
    src={
      Object {
        "x": 0,
        "y": 100,
      }
    }
  />
  <EdgeCurve
    className="dm-path-outer"
    dest={
      Object {
        "x": 100,
        "y": 0,
      }
    }
    edgeStyle={0}
    src={
      Object {
        "x": 0,
        "y": 100,
      }
    }
  />
</g>
`;

exports[`Edge renders the paths using props 1`] = `
<g
  className="dm-edge"
  data-event-target={true}
  data-id="myEdge"
  data-type="DiagramMaker.Edge"
>
  <EdgeCurve
    className="dm-path-inner"
    dest={
      Object {
        "x": 100,
        "y": 0,
      }
    }
    edgeStyle={0}
    src={
      Object {
        "x": 0,
        "y": 100,
      }
    }
  />
  <EdgeCurve
    className="dm-path-outer"
    dest={
      Object {
        "x": 100,
        "y": 0,
      }
    }
    edgeStyle={0}
    src={
      Object {
        "x": 0,
        "y": 100,
      }
    }
  />
</g>
`;
